<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rstefan.business_card.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/nessus_img"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imagine_sigla_firma" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firma_nume"
        android:textStyle="bold"
        android:textColor="@color/dark_blue"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tv_nume_firma" />

    <ImageView
        android:layout_width="230dp"
        android:layout_height="230dp"
        app:srcCompat="@drawable/pc_img"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imagine_carte_vizita" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/persoana_nume"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="@color/dark_blue"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tv_nume_persoana" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/persoana_pozitie"
        android:textSize="20dp"
        android:textColor="@color/dark_blue"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tv_pozitie_persoana" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firma_moto"
        android:textSize="20dp"
        android:textColor="@color/dark_blue"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tv_moto_firma" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/dark_blue"
        android:layout_marginBottom="2dp"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/dark_blue"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/persoana_telefon_1"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/dark_blue"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tv_telefon_1_persoana" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/persoana_telefon_2"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/dark_blue"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tv_telefon_2_persoana" />
</LinearLayout>
